--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,19 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+defaults: &defaults
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  username: root
+  password:
+  socket: <%= ["/tmp/mysqld.sock","/tmp/mysql.sock","/var/run/mysqld/mysqld.sock","/var/lib/mysql/mysql.sock"].detect{|socket| File.exist?(socket) }%>
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  database: ballot
+  <<: *defaults
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  database: ballot_test
+  <<: *defaults
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  database: ballot
+  <<: *defaults
