--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ db/*.sqlite3
 .redcar/
 .sass-cache
 /config/config.yml
-/congif/secrets.yml
+/config/secrets.yml
 /config/database.yml
 /coverage.data
 /coverage/
